src/rules/__snapshots__/no-trailing-whitespace.spec.ts.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule no-trailing-whitespace should contain documentation 1`] = `
{
  "description": "Lines with trailing whitespace cause unnessecary diff when using version control and usually serve no special purpose in HTML.",
  "url": "https://html-validate.org/rules/no-trailing-whitespace.html",
}
`;

exports[`rule no-trailing-whitespace smoketest 1`] = `
"error: Trailing whitespace (no-trailing-whitespace) at test-files/rules/no-trailing-whitespace.html:5:6:
  3 | </foo>
  4 |
> 5 | <bar>
    |      ^
> 6 |   bar
    | ^
  7 |
  8 |   baz
  9 | </bar>
Selector: -
error: Trailing whitespace (no-trailing-whitespace) at test-files/rules/no-trailing-whitespace.html:6:6:
   4 |
   5 | <bar>
>  6 |   bar
     |      ^^
>  7 |
     | ^
   8 |   baz
   9 | </bar>
  10 |
Selector: -
error: Trailing whitespace (no-trailing-whitespace) at test-files/rules/no-trailing-whitespace.html:7:1:
   5 | <bar>
   6 |   bar
>  7 |
     | ^^
>  8 |   baz
     | ^
   9 | </bar>
  10 |
  11 | <baz>
Selector: -
error: Trailing whitespace (no-trailing-whitespace) at test-files/rules/no-trailing-whitespace.html:8:6:
   6 |   bar
   7 |
>  8 |   baz
     |      ^^
>  9 | </bar>
     | ^
  10 |
  11 | <baz>
  12 |   spam
Selector: -
error: Trailing whitespace (no-trailing-whitespace) at test-files/rules/no-trailing-whitespace.html:12:7:
  10 |
  11 | <baz>
> 12 |   spam
     |       ^^
> 13 |
     | ^
  14 |   ham
  15 |
  16 | </baz>
Selector: -
error: Trailing whitespace (no-trailing-whitespace) at test-files/rules/no-trailing-whitespace.html:15:1:
  13 |
  14 |   ham
> 15 |
     | ^^
> 16 | </baz>
     | ^
  17 |
Selector: -"
`;
